@@ -5,42 +5,13 @@ import com.gpxmanager.gpx.beans.Waypoint;
 import java.util.Date;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
-public class MyTime {
+public record MyTime(long time, int hours, int minutes, int seconds) {
 
     public static final int SECONDS_IN_HOUR = 3600;
-    private long time;
-    private int hours;
-    private int minutes;
-    private int seconds;
 
     public MyTime() {
-        time = 0;
-        hours = minutes = seconds = 0;
-    }
-
-    public MyTime(long time, int hours, int minutes, int seconds) {
-        this.time = time;
-        this.hours = hours;
-        this.minutes = minutes;
-        this.seconds = seconds;
-    }
-
-    public long getTime() {
-        return time;
-    }
-
-    public int getHours() {
-        return hours;
-    }
-
-    public int getMinutes() {
-        return minutes;
-    }
-
-    public int getSeconds() {
-        return seconds;
+        this(0, 0, 0, 0);
     }
 
     public static MyTime getTrackTime(List<Waypoint> waypoints) {
@@ -49,7 +20,7 @@ public class MyTime {
                 .map(Waypoint::getTime)
                 .filter(Objects::nonNull)
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
         if (times.size() < 2) {
             return null;
         }
@@ -59,15 +30,12 @@ public class MyTime {
         return fromSeconds(time / 1000);
     }
 
-    public void add(MyTime myTime) {
-        if (myTime == null) {
-            return;
+    public static MyTime add(MyTime time1, MyTime time2) {
+        if (time1 == null || time2 == null) {
+            return null;
         }
-        time += myTime.getTime();
-        MyTime newTime = fromSeconds(time);
-        hours = newTime.getHours();
-        minutes = newTime.getMinutes();
-        seconds = newTime.getSeconds();
+        long time = time1.time() + time2.time();
+        return fromSeconds(time);
     }
 
     public static MyTime fromSeconds(long totalSeconds) {
